--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-peity",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "description": "A Vue version of an excellent peity library for beautiful mini <svg> graphs.",
   "author": "Fangdun Cai <cfddream@gmail.com>",
   "repository": "fundon/vue-peity",
@@ -23,13 +23,14 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-2": "^6.5.0",
     "babel-runtime": "^6.9.2",
+    "copy-webpack-plugin": "^1.1.1",
+    "css-loader": "^0.23.1",
     "eslint": "^2.7.0",
     "eslint-config-standard": "^5.1.0",
     "eslint-loader": "^1.3.0",
+    "eslint-plugin-html": "1.5.1",
     "eslint-plugin-promise": "^1.1.0",
     "eslint-plugin-standard": "^1.3.2",
-    "copy-webpack-plugin": "^1.1.1",
-    "css-loader": "^0.23.1",
     "vue-html-loader": "^1.1.0",
     "vue-loader": "^8.1.1",
     "vue-style-loader": "^1.0.0",
