--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-peity",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "A Vue version of an excellent peity library for beautiful mini <svg> graphs.",
   "author": "Fangdun Cai <cfddream@gmail.com>",
   "repository": "vue-bulma/peity",
@@ -13,7 +13,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "webpack --config build/webpack.min.conf.js",
+    "build": "webpack -p --config build/webpack.min.conf.js",
     "lint": "eslint --ext .js,.vue src"
   },
   "devDependencies": {
@@ -29,8 +29,9 @@
     "eslint-plugin-promise": "3",
     "eslint-plugin-standard": "2",
     "vue-html-loader": "1",
-    "vue-loader": "9.7.0",
+    "vue-loader": "10.0.2",
     "vue-style-loader": "1",
+    "vue-template-compiler": "2.1.7",
     "webpack": "1"
   }
 }
